RESOLVED FIXED135164
[MSE][Mac] In SourceBufferPrivateAVFObjC::abort(), support reseting parser to the last appended initialization segment.
https://bugs.webkit.org/show_bug.cgi?id=135164
Summary [MSE][Mac] In SourceBufferPrivateAVFObjC::abort(), support reseting parser to...
Jer Noble
Reported 2014-07-22 10:57:26 PDT
[MSE][Mac] In SourceBufferPrivateAVFObjC::abort(), support reseting parser to the last appended initialization segment.
Attachments
Patch (8.88 KB, patch)
2016-09-27 16:46 PDT, Jer Noble
no flags
Patch (22.99 KB, patch)
2016-09-27 17:01 PDT, Jer Noble
eric.carlson: review+
Patch for landing (24.45 KB, patch)
2016-09-27 17:51 PDT, Jer Noble
no flags
Patch for landing (26.02 KB, patch)
2016-09-27 18:01 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2016-09-27 16:46:02 PDT
Jer Noble
Comment 2 2016-09-27 16:49:23 PDT
Eric Carlson
Comment 3 2016-09-27 16:57:59 PDT
Comment on attachment 290022 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=290022&action=review Looks like you forgot a few files :-) > Source/WebCore/ChangeLog:17 > + and will block until the the previous append() operation completes. Nit: the the > Source/WebCore/ChangeLog:20 > + SourceBufferPrivateAVFObjC to be reset after an abort(), so make that ivar a @property. Rather than passing a Nit: "a @property" -> "an @property"
Jer Noble
Comment 4 2016-09-27 17:01:13 PDT
Eric Carlson
Comment 5 2016-09-27 17:10:15 PDT
Comment on attachment 290026 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=290026&action=review > Source/WebCore/ChangeLog:17 > + and will block until the the previous append() operation completes. Nit: "the the" > Source/WebCore/ChangeLog:20 > + SourceBufferPrivateAVFObjC to be reset after an abort(), so make that ivar a @property. Rather than passing a Nit: "a @property" -> "an @property" > Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:675 > + dispatch_group_wait(m_isAppendingGroup.get(), DISPATCH_TIME_FOREVER); Is it really safe to wait forever?
Jer Noble
Comment 6 2016-09-27 17:48:13 PDT
(In reply to comment #5) > Comment on attachment 290026 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=290026&action=review > > > Source/WebCore/ChangeLog:17 > > + and will block until the the previous append() operation completes. > > Nit: "the the" Ok. > > Source/WebCore/ChangeLog:20 > > + SourceBufferPrivateAVFObjC to be reset after an abort(), so make that ivar a @property. Rather than passing a > > Nit: "a @property" -> "an @property" Ok. > > Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:675 > > + dispatch_group_wait(m_isAppendingGroup.get(), DISPATCH_TIME_FOREVER); > > Is it really safe to wait forever? Now that I think of it, no, it's not. The parsing thread may be blocked on the main thread providing it a AVStreamSession for EME-backed media elements. Apart from that, however, it should be fine.
Jer Noble
Comment 7 2016-09-27 17:51:10 PDT
Created attachment 290034 [details] Patch for landing
Jer Noble
Comment 8 2016-09-27 18:01:29 PDT
Created attachment 290040 [details] Patch for landing
WebKit Commit Bot
Comment 9 2016-09-28 07:55:10 PDT
Comment on attachment 290040 [details] Patch for landing Clearing flags on attachment: 290040 Committed r206518: <http://trac.webkit.org/changeset/206518>
Ahmad Saleem
Comment 10 2024-09-04 08:18:17 PDT
Note You need to log in before you can comment on or make changes to this bug.