Source/WebCore/platform/mock/mediasource/MockSourceBufferPrivate.cpp
@@ -203,6 +203,10 @@ void MockSourceBufferPrivate::abort()
 {
 }
 
+void MockSourceBufferPrivate::resetParserState()
+{
+}
+
 void MockSourceBufferPrivate::removedFromMediaSource()
 {
     if (m_mediaSource)
